--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,19 +1,16 @@
-# any-project/.github/workflows/ci.yml 
-
-name: CI
-
+name: CI/CD via Reusable Workflow
+ 
 on:
   push:
-    branches: [ main, develop ]
-    tags: [ 'v*' ]
-  workflow_dispatch:
-
+    branches: [main, release/*]
+    tags: ['v*.*.*']
+ 
 jobs:
-  # 确保 'ci' job 下只有 'uses' 一个顶级键
-  ci:
-    # 将整个 uses 的值用双引号包裹，以避免 YAML 解析器产生歧义
-    uses: "fengdiandian/github-actions-templates/.github/workflows/universal-pipeline.yaml@main" 
+  trigger-universal-pipeline:
+    uses: fengdiandian/github-actions-templates/.github/workflows/universal-pipeline.yml@main 
     with:
-      project_repo: ${{ github.repository  }}
-      deploy_to_prod: ${{ github.ref  == 'refs/heads/main' || startsWith(github.ref,  'refs/tags/v') }}
-    secrets: inherit
+      branch-or-tag: ${{ github.ref  }}
+    secrets:
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      KUBECONFIG: ${{ secrets.KUBECONFIG }}
