--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,20 +1,16 @@
-name: Manual CI/CD Pipeline Trigger 
- 
+# any-project/.github/workflows/ci.yml 
+name: CI
+
 on:
+  push:
+    branches: [ main, develop ]
+    tags: [ 'v*' ]
   workflow_dispatch:
-    inputs:
-      ref:
-        description: 'Branch, tag, or commit SHA to checkout (e.g., refs/heads/main)'
-        required: true 
-        default: 'refs/heads/main'
- 
+
 jobs:
-  call-universal-pipeline:
-    uses: fengdiandian/github-actions-templates/.github/workflows/universal-pipeline.yaml@main 
+  ci:
+    uses: your-org/github-actions-templates/.github/workflows/universal-pipeline.yml@main 
     with:
-      project_repo: ${{ github.repository  }}     # 当前调用仓库名称 [1]()
-      ref: ${{ github.event.inputs.ref  }}       # 用户手动输入的分支/tag引用 [2]()
-    secrets:
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      #KUBECONFIG: ${{ secrets.KUBECONFIG }}
+      project_repo: ${{ github.repository  }} # 自动传递 org/project-name
+      deploy_to_prod: ${{ github.ref  == 'refs/heads/main' || startsWith(github.ref,  'refs/tags/v') }}
+    secrets: inherit # 继承所有secrets，中央workflow会按需取用
